# rag_app

./: .gitignore  Cargo.toml
e2e/: Cargo.toml
e2e/tests/: workflow_test.rs
server/: Cargo.toml
server/src/: db.rs  llm.rs  main.rs  rag_google_llm.py
shared/: Cargo.toml
shared/src/: lib.rs
web/: Cargo.toml  index.html
web/src/: home.rs  inventory.rs  main.rs  presets.rs  types.rs
