[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
serde = "1.0"
serde_json = "1.0"
gloo-net = "0.4"
gloo = "0.8"
chrono = "0.4"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlTextAreaElement", "InputEvent"] }
uuid = { version = "1", features = ["v4", "js"] }
yew-router = "0.17"
regex = "1"